--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -70,32 +70,23 @@
       </section>
       <section id="what" class="data-section" role="tabpanel">
         <h2>What</h2>
-        <p></p>
-        <table>
-          <thead>
-            <tr>
-              <th>My Favorite Genres:</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>- Horror</td> 
-            </tr>
-            <tr>
-              <td>- Thriller</td>
-            </tr>
-            <tr>
-              <td>- Fantasy</td>
-            </tr>
-          </tbody>
-        </table>
+        <p>Welcome to my hobby site!</p>
+        <p>Reading is one of my favorite hobbies. I enjoy losing myself in stories, whether it's novels, comics, or manga. Each one has its own things: novels are great for deep and thorough stories, comics are colorful and entertaining, and manga have amaxong action and art.</p>
+        <p>I love reading because it helps me relax, use my imagination, and learn new things.</p>
+        <br>
+        <p>Some of my favorite genres include:</p>
+        <ul>
+          <li>Horror</li>
+          <li>Thriller</li>
+          <li>Fantasy</li>
+        </ul>
         <figure>
-          <img src="#" alt="#">
-          <figcaption></figcaption>
+          <img src="images/ai_generated_books.png" alt="ai generated image of a bookstore." width="400" height="400">
+          <figcaption>AI generated image of the front of a bookstore.</figcaption>
         </figure>
       </section>
       <section id="when" class="data-section" role="tabpanel">
-        <h2>When</h2>
+        <h2>When</h2><!--needs work-->
         <p>I usually read whenever I want to take a break from working on assignments or if I get bored.</p>
         <figure>
           <img src="#" alt="#">
@@ -103,59 +94,46 @@
         </figure>
       </section>
       <section id="where" class="data-section" role="tabpanel">
-        <h2>Where</h2> <!--need to improve -->
-        <p>I read anywhere and everywhere, at my desk, at tables, any seating on campus.</p>
+        <h2>Where</h2>
+        <p>I read pretty much anywhere I have a moment to myself. At home, it's usually at my desk or on the sofa. On campus, it's usually when I'm eating lunch, when I'm waiting on my next class, or waiting for the bus.</p>
+        <p>I get my books from a few different places. I go to libraries to find new books I may be interested in, bookstores to find physical copies of books I want to keep, and online if I can't find what I'm looking for.</p>
         <br>
-        <table>
-          <thead>
-            <tr><th>Where I get books:</th></tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>- Libraries</td> 
-            </tr>
-            <tr>
-              <td>- Local Bookstores</td>
-            </tr>
-            <tr>
-              <td>- Websites</td>
-            </tr>
-          </tbody>
-        </table>
+        <p>Where I get my books:</p>
+        <ul>
+          <li>Local Bookstores</li>
+          <li>Libraries</li>
+          <li>Online Websites</li>
+        </ul>
         <figure>
           <img src="images/ai_generated_bookstore.png" alt="ai generated image of a bookstore." width="400" height="400">
-          <figcaption>AI generated image of the front of a bookstore.</figcaption>
+          <figcaption>AI generated image of the front of a small town bookstore.</figcaption>
         </figure>
       </section>
       <section id="how" class="data-section" role="tabpanel">
-        <h2>How</h2>
-        <table>
-          <thead>
-            <tr><th>What I Use to Read:</th></tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>- Physical Copy</td> 
-            </tr>
-            <tr>
-              <td>- Phone</td>
-            </tr>
-            <tr>
-              <td>- Laptop</td>
-            </tr>
-          </tbody>
-        </table>
+        <h2>How</h2><!--needs work-->
+        <p></p>
+        <p></p>
+        <br>
+        <p>What I use to read:</p>
+        <ul>
+          <li>Physical Copy</li>
+          <li>Phone</li>
+          <li>Laptop</li>
+        </ul>
         <figure>
-          <img src="#" alt="#">
-          <figcaption></figcaption>
+          <img src="images/ai_generated_book_and_phone.png" alt="ai generated image of a bookstore." width="400" height="400">
+          <figcaption>AI generated image of the front of a small town bookstore.</figcaption>
         </figure>
       </section>
       <section id="why" class="data-section" role="tabpanel">
-        <h2>Why</h2>
+        <h2>Why</h2><!--needs work-->
       </section>
       <section id="ai-prompts" class="data-section" role="tabpanel">
         <h2>AI Prompts</h2>
         <p><strong>Nav bar prompt: </strong>Create the code for a nav bar. it should include links to these sections: who, what, when, where, how, why, and ai prompts. use this emoji(📖) as a divider.</p>
+        <p><strong>Image prompt: </strong>Generate an image of a small town bookstore.</p>
+        <p><strong>Image prompt: </strong>Generate an image of a horror book anda  thriller book.</p>
+        <p><strong>Image prompt: </strong>Generate an image of a physical book and a phone beside it that is opened to a digital book.</p>
       </section>
     </main>
     <footer>
