--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -111,8 +111,8 @@
       </section>
       <section id="how" class="data-section" role="tabpanel">
         <h2>How</h2><!--needs work-->
-        <p></p>
-        <p></p>
+        <p>I read in a few different ways depending on my mood and where I am. If I'm home, I prefer to hold and read physical books. If I'm outside, I'll use my phone to read digital comics or manga.</p>
+        <p>I also use reading websites to find books, comics, or manga online. It makes it easier to find something new to read, access wherever I am, and read whenever I feel like reading.</p>
         <br>
         <p>What I use to read:</p>
         <ul>
