--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -89,7 +89,7 @@
         <h2>When</h2><!--needs work-->
         <p>I usually read whenever I want to take a break from working on assignments or if I get bored.</p>
         <figure>
-          <img src="#" alt="#">
+          <img src="images/ai_generated_taking_a_break.png" alt="ai generated image of a person taking a break." width="400" height="400">
           <figcaption></figcaption>
         </figure>
       </section>
@@ -134,6 +134,7 @@
         <p><strong>Image prompt: </strong>Generate an image of a small town bookstore.</p>
         <p><strong>Image prompt: </strong>Generate an image of a horror book anda  thriller book.</p>
         <p><strong>Image prompt: </strong>Generate an image of a physical book and a phone beside it that is opened to a digital book.</p>
+        <p><strong>Image prompt: </strong>Generate a simple image that could represent "taking a break".</p>
       </section>
     </main>
     <footer>
