updated hobby index.html and added new image

--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -83,7 +83,13 @@
       <hr>
       <section id="who" class="data-section">
         <h2>Who</h2>
-        <p>Hey, I'm Muhilan and I love to read. I got into reading when I first  </p>
+        <p>Hey, I'm Muhilan and I love to read. I got into reading when I first picked up a "Curious George" picture book that I found at home after watching the show. I also wacthed other shows and found and read their books, such as "Clifford the Big Red Dog" and "The Cat in the Cat"</p>
+        <p></p>
+        <br>
+          <figure>
+            <img src="images/ai_generated_three_books.png" alt="ai generated image of a bookstore." width="400" height="400">
+            <figcaption>AI generated image of three books, The Cat in the Hat, Curious George, and Clifford the Big Red Dog.</figcaption>
+          </figure>
       </section>
       <section id="what" class="data-section" role="tabpanel">
         <h2>What</h2>
@@ -156,6 +162,7 @@
         <p><strong>Image prompt: </strong>Generate an image of a horror book anda  thriller book.</p>
         <p><strong>Image prompt: </strong>Generate an image of a physical book and a phone beside it that is opened to a digital book.</p>
         <p><strong>Image prompt: </strong>Generate a simple image that could represent "taking a break".</p>
+        <p><strong>Image prompt: </strong>Generate an image of 3 books, The Cat in the Hat, Curious George, and Clifford the Big Red Dog.</p>
       </section>
     </main>
     <footer>
