--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -90,6 +90,9 @@
             <img src="images/ai_generated_three_books.png" alt="ai generated image of a bookstore." width="400" height="400">
             <figcaption>AI generated image of three books, The Cat in the Hat, Curious George, and Clifford the Big Red Dog.</figcaption>
           </figure>
+          <br>
+          <br>
+          <p><em>Prompt used: Generate an image of 3 books, The Cat in the Hat, Curious George, and Clifford the Big Red Dog.</em></p>
       </section>
       <section id="what" class="data-section" role="tabpanel">
         <h2>What</h2>
@@ -106,10 +109,13 @@
           </ul>
           <br>
           <figure>
-            <img src="images/ai_generated_books.png" alt="ai generated image of a bookstore." width="400" height="400">
-            <figcaption>AI generated image of the front of a bookstore.</figcaption>
+            <img src="images/ai_generated_books.png" alt="ai generated image of 2 books." width="400" height="400">
+            <figcaption>AI generated image a horror book and a thriller book.</figcaption>
           </figure>
-        </div>  
+        </div>
+        <br>
+        <br>
+        <p><em>Prompt used: Generate an image of a horror book and a thriller book</em></p>
       </section>
       <section id="when" class="data-section" role="tabpanel">
         <h2>When</h2><!--needs work-->
@@ -117,8 +123,11 @@
         <br>
         <figure>
           <img src="images/ai_generated_taking_a_break.png" alt="ai generated image of a person taking a break." width="400" height="400">
-          <figcaption></figcaption>
+          <figcaption>AI generated image of a person taking a break.</figcaption>
         </figure>
+        <br>
+        <br>
+        <p><em>Prompt used: Generate a simple image that could represent "taking a break".</em></p>
       </section>
       <section id="where" class="data-section" role="tabpanel">
         <h2>Where</h2>
@@ -126,15 +135,20 @@
         <p>I get my books from a few different places. I go to libraries to find new books I may be interested in, bookstores to find physical copies of books I want to keep, and online if I can't find what I'm looking for.</p>
         <br>
         <p>Where I get my books:</p>
-        <ul>
-          <li>Local Bookstores</li>
-          <li>Libraries</li>
-          <li>Online Websites</li>
-        </ul>
-        <figure>
-          <img src="images/ai_generated_bookstore.png" alt="ai generated image of a bookstore." width="400" height="400">
-          <figcaption>AI generated image of the front of a small town bookstore.</figcaption>
-        </figure>
+        <div class="beside">
+          <ul>
+            <li>Local Bookstores</li>
+            <li>Libraries</li>
+            <li>Online Websites</li>
+          </ul>
+          <figure>
+            <img src="images/ai_generated_bookstore.png" alt="ai generated image of a bookstore." width="400" height="400">
+            <figcaption>AI generated image of the front of a small town bookstore.</figcaption>
+          </figure>
+        </div>
+        <br>
+        <br>
+        <p><em>Prompt used: Generate an image of a small town bookstore.</em></p>
       </section>
       <section id="how" class="data-section" role="tabpanel">
         <h2>How</h2><!--needs work-->
@@ -142,15 +156,20 @@
         <p>I also use reading websites to find books, comics, or manga online. It makes it easier to find something new to read, access wherever I am, and read whenever I feel like reading.</p>
         <br>
         <p>What I use to read:</p>
-        <ul>
-          <li>Physical Copy</li>
-          <li>Phone</li>
-          <li>Laptop</li>
-        </ul>
-        <figure>
-          <img src="images/ai_generated_book_and_phone.png" alt="ai generated image of a bookstore." width="400" height="400">
-          <figcaption>AI generated image of the front of a small town bookstore.</figcaption>
-        </figure>
+        <div class="beside">
+          <ul>
+            <li>Physical Copy</li>
+            <li>Phone</li>
+            <li>Laptop</li>
+          </ul>
+          <figure>
+            <img src="images/ai_generated_book_and_phone.png" alt="ai generated image of a book and a phone." width="400" height="400">
+            <figcaption>AI generated image of a book and phone that is opened to a digital book.</figcaption>
+          </figure>
+        </div>
+        <br>
+        <br>
+        <p><em>Prompt used: Generate an image of a physical book and a phone beside it that is opened to a digital book.</em></p>
       </section>
       <section id="why" class="data-section" role="tabpanel">
         <h2>Why</h2><!--needs work-->
@@ -159,7 +178,7 @@
         <h2>AI Prompts</h2>
         <p><strong>Nav bar prompt: </strong>Create the code for a nav bar. it should include links to these sections: who, what, when, where, how, why, and ai prompts. use this emoji(📖) as a divider.</p>
         <p><strong>Image prompt: </strong>Generate an image of a small town bookstore.</p>
-        <p><strong>Image prompt: </strong>Generate an image of a horror book anda  thriller book.</p>
+        <p><strong>Image prompt: </strong>Generate an image of a horror book and a thriller book.</p>
         <p><strong>Image prompt: </strong>Generate an image of a physical book and a phone beside it that is opened to a digital book.</p>
         <p><strong>Image prompt: </strong>Generate a simple image that could represent "taking a break".</p>
         <p><strong>Image prompt: </strong>Generate an image of 3 books, The Cat in the Hat, Curious George, and Clifford the Big Red Dog.</p>
