--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -56,6 +56,12 @@
         footer{
           text-align: center;
         }
+        .quote-block{
+          background-color:  rgb(23, 4, 4);
+          color: rgb(252, 143, 143);
+          border-radius: 10px;
+          padding:15px;
+        }
     </style>
   </head>
   <body>
@@ -173,15 +179,32 @@
       </section>
       <section id="why" class="data-section" role="tabpanel">
         <h2>Why</h2><!--needs work-->
+        <p>I genuinely enjoy reading becasue it gives me a break from the real world. It provides characters, places, and experiences I wouldn't get in everyday life.</p>
+        <p>No matter if it's a novel full of suspense, a comic full of vibrant art, or a manga full of action, each different format offers unique ways to explore new stories and ideas. Reading feeds/fuels my imagination, helps me unwind and relax, and sometimes teaches me new perspectives I may never have considered otherwise.</p>
+        <p>One of the main reasons I love to read is how it embraces different and unique ideas and makes them work. The creativity in stories help and inspire me to think differently.</p>
+        <br>
+        <div class="quote-block">
+          <blockquote><em>“When stupid ideas work, they become genius ideas.”</em></blockquote>
+          <blockquote>- Andy Weir, <em>Project Hail Mary</em></blockquote>
+        </div>
+        <br>
+        <figure>
+            <img src="images/ai_generated_project_hail_mary_book.png" alt="ai generated image of the book Project Hail Mary" width="400" height="400">
+            <figcaption>AI generated image of the book Project Hail Mary</figcaption>
+          </figure>
+          <br>
+        <br>
+        <p><em>Prompt used:</em>Generate a picture of the book: Project Hail Mary, by Andy Weir.</p>
       </section>
       <section id="ai-prompts" class="data-section" role="tabpanel">
         <h2>AI Prompts</h2>
         <p><strong>Nav bar prompt: </strong>Create the code for a nav bar. it should include links to these sections: who, what, when, where, how, why, and ai prompts. use this emoji(📖) as a divider.</p>
-        <p><strong>Image prompt: </strong>Generate an image of a small town bookstore.</p>
-        <p><strong>Image prompt: </strong>Generate an image of a horror book and a thriller book.</p>
-        <p><strong>Image prompt: </strong>Generate an image of a physical book and a phone beside it that is opened to a digital book.</p>
-        <p><strong>Image prompt: </strong>Generate a simple image that could represent "taking a break".</p>
-        <p><strong>Image prompt: </strong>Generate an image of 3 books, The Cat in the Hat, Curious George, and Clifford the Big Red Dog.</p>
+        <p><strong>Image prompt for WHERE: </strong>Generate an image of a small town bookstore.</p>
+        <p><strong>Image prompt for WHAT: </strong>Generate an image of a horror book and a thriller book.</p>
+        <p><strong>Image prompt for HOW: </strong>Generate an image of a physical book and a phone beside it that is opened to a digital book.</p>
+        <p><strong>Image prompt for WHEN: </strong>Generate a simple image that could represent "taking a break".</p>
+        <p><strong>Image prompt for WHO: </strong>Generate an image of 3 books, The Cat in the Hat, Curious George, and Clifford the Big Red Dog.</p>
+        <p><strong>Image Prompt for WHY: </strong>Generate a picture of the book: Project Hail Mary, by Andy Weir.</p>
       </section>
     </main>
     <footer>
