--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -61,6 +61,8 @@
           color: rgb(252, 143, 143);
           border-radius: 10px;
           padding:15px;
+          margin-left: 150px;
+          margin-right:150px;
         }
     </style>
   </head>
