--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -196,7 +196,7 @@
           </figure>
           <br>
         <br>
-        <p><em>Prompt used:</em>Generate a picture of the book: Project Hail Mary, by Andy Weir.</p>
+        <p><em>Prompt used: Generate a picture of the book: Project Hail Mary, by Andy Weir.</em></p>
       </section>
       <section id="ai-prompts" class="data-section" role="tabpanel">
         <h2>AI Prompts</h2>
