update hobby index and added new image

--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -7,10 +7,11 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <style>
         body{
-            background-color: rgb(252, 143, 143);
+            background-color: rgb(247, 158, 158);
+            color:rgb(20, 97, 13)
         }
         a{
-            color:rgb(22, 4, 139)
+            color:rgb(20, 97, 13)
         }
         a:hover{
     color:rgb(191, 26, 26);
@@ -31,10 +32,6 @@
           display:flex;
           flex-direction: column;
           align-items: center;
-        }
-        hr{
-          height:5px;
-          background-color: black;
         }
         section{
           margin-left: 60px;
@@ -58,9 +55,17 @@
         }
         .quote-block{
           background-color:  rgb(23, 4, 4);
-          color: rgb(252, 143, 143);
+          color:  rgb(247, 158, 158);
           border-radius: 10px;
           padding:15px;
+          margin-left: 150px;
+          margin-right:150px;
+        }
+        .h-block{
+          background-color: rgb(20, 97, 13);
+          color:  rgb(247, 158, 158);
+          border-radius: 10px;
+          padding:10px;
           margin-left: 150px;
           margin-right:150px;
         }
@@ -88,24 +93,32 @@
     <main>
       <h2 class="mobile-heading" style="text-align: center;">Hobby Site</h2>
       <h2 class="mobile-heading" style="text-align: center;">Muhilan Muruganandam|Magnificent Meercat</h2>
-      <hr>
       <section id="who" class="data-section">
-        <h2>Who</h2>
-        <p>Hey, I'm Muhilan and I love to read. I got into reading when I first picked up a "Curious George" picture book that I found at home after watching the show. I also wacthed other shows and found and read their books, such as "Clifford the Big Red Dog" and "The Cat in the Cat"</p>
-        <p></p>
+        <div class="h-block"><h2>Who</h2></div>
+        <p>Hey, I'm Muhilan and I love to read. I got into reading when I first picked up a "Curious George" picture book that I found at home after watching the show. I also wacthed other shows and found and read their books, such as "Clifford the Big Red Dog" and "The Cat in the Cat".</p>
+        <p>As I grew up, my taste in books changed from picture books to novels and comics. Nowadays I enjoy reading stories that challenge my imagination and keep me hooked.</p>
+        <br>
+        <p>My top 3 books (currently) are:</p>
+        <div class="beside">
+          <ul>
+            <li>Project Hail Mary, by Andy Weir</li>
+            <li>The Walking Dead, by Robert Kirkman</li>
+            <li>The Silent Patient, by Alex Michaelides</li>
+          </ul>
         <br>
           <figure>
             <img src="images/ai_generated_three_books.png" alt="ai generated image of a bookstore." width="400" height="400">
             <figcaption>AI generated image of three books, The Cat in the Hat, Curious George, and Clifford the Big Red Dog.</figcaption>
           </figure>
+          </div>
           <br>
           <br>
           <p><em>Prompt used: Generate an image of 3 books, The Cat in the Hat, Curious George, and Clifford the Big Red Dog.</em></p>
       </section>
       <section id="what" class="data-section" role="tabpanel">
-        <h2>What</h2>
+        <div class="h-block"><h2>What</h2></div>
         <p>Welcome to my hobby site!</p>
-        <p>Reading is one of my favorite hobbies. I enjoy losing myself in stories, whether it's novels, comics, or manga. Each one has its own things: novels are great for deep and thorough stories, comics are colorful and entertaining, and manga have amaxong action and art.</p>
+        <p>Reading is one of my favorite hobbies. I enjoy losing myself in stories, whether it's novels, comics, or manga. Each one has its own things: novels are great for deep and thorough stories, comics are colorful and entertaining, and manga have amazing action and art.</p>
         <p>I love reading because it helps me relax, use my imagination, and learn new things.</p>
         <br>
         <p>Some of my favorite genres include:</p>
@@ -126,7 +139,7 @@
         <p><em>Prompt used: Generate an image of a horror book and a thriller book</em></p>
       </section>
       <section id="when" class="data-section" role="tabpanel">
-        <h2>When</h2><!--needs work-->
+        <div class="h-block"><h2>When</h2></div><!--needs work-->
         <p>I usually read whenever I want to take a break from working on assignments or if I get bored.</p>
         <br>
         <figure>
@@ -138,7 +151,7 @@
         <p><em>Prompt used: Generate a simple image that could represent "taking a break".</em></p>
       </section>
       <section id="where" class="data-section" role="tabpanel">
-        <h2>Where</h2>
+        <div class="h-block"><h2>Where</h2></div>
         <p>I read pretty much anywhere I have a moment to myself. At home, it's usually at my desk or on the sofa. On campus, it's usually when I'm eating lunch, when I'm waiting on my next class, or waiting for the bus.</p>
         <p>I get my books from a few different places. I go to libraries to find new books I may be interested in, bookstores to find physical copies of books I want to keep, and online if I can't find what I'm looking for.</p>
         <br>
@@ -159,7 +172,7 @@
         <p><em>Prompt used: Generate an image of a small town bookstore.</em></p>
       </section>
       <section id="how" class="data-section" role="tabpanel">
-        <h2>How</h2><!--needs work-->
+        <div class="h-block"><h2>How</h2></div>
         <p>I read in a few different ways depending on my mood and where I am. If I'm home, I prefer to hold and read physical books. If I'm outside, I'll use my phone to read digital comics or manga.</p>
         <p>I also use reading websites to find books, comics, or manga online. It makes it easier to find something new to read, access wherever I am, and read whenever I feel like reading.</p>
         <br>
@@ -180,7 +193,7 @@
         <p><em>Prompt used: Generate an image of a physical book and a phone beside it that is opened to a digital book.</em></p>
       </section>
       <section id="why" class="data-section" role="tabpanel">
-        <h2>Why</h2><!--needs work-->
+        <div class="h-block"><h2>Why</h2></div>
         <p>I genuinely enjoy reading becasue it gives me a break from the real world. It provides characters, places, and experiences I wouldn't get in everyday life.</p>
         <p>No matter if it's a novel full of suspense, a comic full of vibrant art, or a manga full of action, each different format offers unique ways to explore new stories and ideas. Reading feeds/fuels my imagination, helps me unwind and relax, and sometimes teaches me new perspectives I may never have considered otherwise.</p>
         <p>One of the main reasons I love to read is how it embraces different and unique ideas and makes them work. The creativity in stories help and inspire me to think differently.</p>
@@ -199,7 +212,7 @@
         <p><em>Prompt used: Generate a picture of the book: Project Hail Mary, by Andy Weir.</em></p>
       </section>
       <section id="ai-prompts" class="data-section" role="tabpanel">
-        <h2>AI Prompts</h2>
+        <div class="h-block"><h2>AI Prompts</h2></div>
         <p><strong>Nav bar prompt: </strong>Create the code for a nav bar. it should include links to these sections: who, what, when, where, how, why, and ai prompts. use this emoji(📖) as a divider.</p>
         <p><strong>Image prompt for WHERE: </strong>Generate an image of a small town bookstore.</p>
         <p><strong>Image prompt for WHAT: </strong>Generate an image of a horror book and a thriller book.</p>
