--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -139,8 +139,10 @@
         <p><em>Prompt used: Generate an image of a horror book and a thriller book</em></p>
       </section>
       <section id="when" class="data-section" role="tabpanel">
-        <div class="h-block"><h2>When</h2></div><!--needs work-->
+        <div class="h-block"><h2>When</h2></div>
         <p>I usually read whenever I want to take a break from working on assignments or if I get bored.</p>
+        <p>During breaks or holidays, I usually set aside a solid hour or so to read uninterrupted.</p>
+        <p>On busy days, I might only have a few minutes to read while in-between classes or when waiting in line to get food, so I keep digital copies of some books on my phone so I can read wherever I am.</p>
         <br>
         <figure>
           <img src="images/ai_generated_taking_a_break.png" alt="ai generated image of a person taking a break." width="400" height="400">
