--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -94,7 +94,7 @@
       <h2 class="mobile-heading" style="text-align: center;">Hobby Site</h2>
       <h2 class="mobile-heading" style="text-align: center;">Muhilan Muruganandam|Magnificent Meercat</h2>
       <section id="who" class="data-section">
-        <div class="h-block"><h2>Who</h2></div>
+        <div class="h-block"><h2>Who I Am</h2></div>
         <p>Hey, I'm Muhilan and I love to read. I got into reading when I first picked up a "Curious George" picture book that I found at home after watching the show. I also wacthed other shows and found and read their books, such as "Clifford the Big Red Dog" and "The Cat in the Cat".</p>
         <p>As I grew up, my taste in books changed from picture books to novels and comics. Nowadays I enjoy reading stories that challenge my imagination and keep me hooked.</p>
         <br>
@@ -116,7 +116,7 @@
           <p><em>Prompt used: Generate an image of 3 books, The Cat in the Hat, Curious George, and Clifford the Big Red Dog.</em></p>
       </section>
       <section id="what" class="data-section" role="tabpanel">
-        <div class="h-block"><h2>What</h2></div>
+        <div class="h-block"><h2>What This Site Is About</h2></div>
         <p>Welcome to my hobby site!</p>
         <p>Reading is one of my favorite hobbies. I enjoy losing myself in stories, whether it's novels, comics, or manga. Each one has its own things: novels are great for deep and thorough stories, comics are colorful and entertaining, and manga have amazing action and art.</p>
         <p>I love reading because it helps me relax, use my imagination, and learn new things.</p>
@@ -139,7 +139,7 @@
         <p><em>Prompt used: Generate an image of a horror book and a thriller book</em></p>
       </section>
       <section id="when" class="data-section" role="tabpanel">
-        <div class="h-block"><h2>When</h2></div>
+        <div class="h-block"><h2>When I Read</h2></div>
         <p>I usually read whenever I want to take a break from working on assignments or if I get bored.</p>
         <p>During breaks or holidays, I usually set aside a solid hour or so to read uninterrupted.</p>
         <p>On busy days, I might only have a few minutes to read while in-between classes or when waiting in line to get food, so I keep digital copies of some books on my phone so I can read wherever I am.</p>
@@ -153,7 +153,7 @@
         <p><em>Prompt used: Generate a simple image that could represent "taking a break".</em></p>
       </section>
       <section id="where" class="data-section" role="tabpanel">
-        <div class="h-block"><h2>Where</h2></div>
+        <div class="h-block"><h2>Where I Read</h2></div>
         <p>I read pretty much anywhere I have a moment to myself. At home, it's usually at my desk or on the sofa. On campus, it's usually when I'm eating lunch, when I'm waiting on my next class, or waiting for the bus.</p>
         <p>I get my books from a few different places. I go to libraries to find new books I may be interested in, bookstores to find physical copies of books I want to keep, and online if I can't find what I'm looking for.</p>
         <br>
@@ -174,7 +174,7 @@
         <p><em>Prompt used: Generate an image of a small town bookstore.</em></p>
       </section>
       <section id="how" class="data-section" role="tabpanel">
-        <div class="h-block"><h2>How</h2></div>
+        <div class="h-block"><h2>How I Read</h2></div>
         <p>I read in a few different ways depending on my mood and where I am. If I'm home, I prefer to hold and read physical books. If I'm outside, I'll use my phone to read digital comics or manga.</p>
         <p>I also use reading websites to find books, comics, or manga online. It makes it easier to find something new to read, access wherever I am, and read whenever I feel like reading.</p>
         <br>
@@ -195,7 +195,7 @@
         <p><em>Prompt used: Generate an image of a physical book and a phone beside it that is opened to a digital book.</em></p>
       </section>
       <section id="why" class="data-section" role="tabpanel">
-        <div class="h-block"><h2>Why</h2></div>
+        <div class="h-block"><h2>Why I Read</h2></div>
         <p>I genuinely enjoy reading becasue it gives me a break from the real world. It provides characters, places, and experiences I wouldn't get in everyday life.</p>
         <p>No matter if it's a novel full of suspense, a comic full of vibrant art, or a manga full of action, each different format offers unique ways to explore new stories and ideas. Reading feeds/fuels my imagination, helps me unwind and relax, and sometimes teaches me new perspectives I may never have considered otherwise.</p>
         <p>One of the main reasons I love to read is how it embraces different and unique ideas and makes them work. The creativity in stories help and inspire me to think differently.</p>
