--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -215,12 +215,12 @@
       </section>
       <section id="ai-prompts" class="data-section" role="tabpanel">
         <div class="h-block"><h2>AI Prompts</h2></div>
-        <p><strong>Image prompt for WHERE: </strong>Generate an image of a small town bookstore.</p>
-        <p><strong>Image prompt for WHAT: </strong>Generate an image of a horror book and a thriller book.</p>
-        <p><strong>Image prompt for HOW: </strong>Generate an image of a physical book and a phone beside it that is opened to a digital book.</p>
-        <p><strong>Image prompt for WHEN: </strong>Generate a simple image that could represent "taking a break".</p>
-        <p><strong>Image prompt for WHO: </strong>Generate an image of 3 books, The Cat in the Hat, Curious George, and Clifford the Big Red Dog.</p>
-        <p><strong>Image Prompt for WHY: </strong>Generate a picture of the book: Project Hail Mary, by Andy Weir.</p>
+        <p><strong>Image prompt for WHERE: </strong>Generate an image of a small town bookstore. Used Google Gemini.</p>
+        <p><strong>Image prompt for WHAT: </strong>Generate an image of a horror book and a thriller book. Used Google Gemini.</p>
+        <p><strong>Image prompt for HOW: </strong>Generate an image of a physical book and a phone beside it that is opened to a digital book. Used Google Gemini.</p>
+        <p><strong>Image prompt for WHEN: </strong>Generate a simple image that could represent "taking a break". Used Google Gemini.</p>
+        <p><strong>Image prompt for WHO: </strong>Generate an image of 3 books, The Cat in the Hat, Curious George, and Clifford the Big Red Dog. Used Google Gemini.</p>
+        <p><strong>Image Prompt for WHY: </strong>Generate a picture of the book: Project Hail Mary, by Andy Weir. Used Google Gemini.</p>
       </section>
     </main>
     <footer>
