--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -73,7 +73,7 @@
   </head>
   <body>
     <header>
-      <h1>Reading</h1>
+      <h1>Hobby Site: Reading</h1>
       <div role="tablist">
         <a href="#what" class="nav-link" role="tab" aria-selected="true">What</a>
         📖
@@ -91,7 +91,6 @@
       </div>
     </header>
     <main>
-      <h2 class="mobile-heading" style="text-align: center;">Hobby Site</h2>
       <h2 class="mobile-heading" style="text-align: center;">Muhilan Muruganandam|Magnificent Meercat</h2>
       <section id="who" class="data-section">
         <div class="h-block"><h2>Who I Am</h2></div>
