--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -37,22 +37,22 @@
       <h3>Please submit the form below.</h3>
       <form>
         <label for="firstName">First Name</label>
-        <input id="firstName" type="text" name="firstName" value="Muhilan" placeholder="first name">
+        <input id="firstName" type="text" value="Muhilan" placeholder="first name">
 
         <label for="middleName">Middle Name/Initial (optional)</label>
-        <input id="middleName" type="text" name="middleName" value=" placeholder="middle name">
+        <input id="middleName" type="text" value=" placeholder="middle name">
 
         <label for="nickname">Nickname/Preffered Name (optional)</label>
-        <input id="nickname" type="text" name="nickname" value="" placeholder="nickname">
+        <input id="nickname" type="text" value="" placeholder="nickname">
 
         <label for="lastName">Last Name</label>
-        <input id="lastName" type="text" name="lastName" value="Muruganandam" placeholder="last name">
+        <input id="lastName" type="text" value="Muruganandam" placeholder="last name">
 
         <label for="acknStmt">Acknowledgement Statement</label>
-        <input id="acknStmt" type="text" name="acknStmt" value="I acknowledge that the information I post here is public." placeholder="Enter acknowledgement statement">
+        <input id="acknStmt" type="text" value="I acknowledge that the information I post here is public." placeholder="Enter acknowledgement statement">
 
         <label for="acknDate">Acknowledgement Date</label>
-        <input id="acknDate" type="text" name="acknDate" value="8/21/25" placeholder="Enter acknowledgement date">
+        <input id="acknDate" type="text" value="8/21/25" placeholder="Enter acknowledgement date">
       </form>
     </main>
     <footer>
