--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -40,7 +40,7 @@
         <input id="firstName" type="text" value="Muhilan" placeholder="first name">
 
         <label for="middleName">Middle Name/Initial (optional)</label>
-        <input id="middleName" type="text" value=" placeholder="middle name">
+        <input id="middleName" type="text" value="" placeholder="middle name">
 
         <label for="nickname">Nickname/Preffered Name (optional)</label>
         <input id="nickname" type="text" value="" placeholder="nickname">
