updated js and html for intro form

--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -85,6 +85,8 @@
         <label>Professional Background: <input id="profBg" type="text" value="" placeholder="Enter professional background"></label>
         
         <label>Academic Background: <input id="academicBg" type="text" value="Junior at UNCC majoring in Computer Science with a concentration in Software Engineering." placeholder="Enter acdemic background"></label>
+
+        <label>Background in this subject: <input id="subjectBg" type="text" value="n/a" placeholder="Enter background in this subject"></label>
         
         <label>Primary Computer: <input id="primaryComp" type="text" value="Windows Thinkpad" placeholder="Enter primary computer"></label>
 
